Added meta data to no decay site.

--- a/discord/no-decay/index.html
+++ b/discord/no-decay/index.html
@@ -4,7 +4,12 @@
 		<title>No Decay</title>
 		<link rel="icon" href="https://cdn.discordapp.com/icons/457633643880382464/2ce92181d0f0f538798e2dc1f9ccfc76.webp">
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta content="No Decay &#x2192; Enter Server" property="og:title">
+        <meta content="An organisation dedicating coaching players through the Overwatch ranks, from Bronze through to low Diamond via scrim teams and other coaching resources." property="og:description">
+        <meta content="No Decay" property="og:site_name">
+        <meta content='https://cdn.discordapp.com/icons/457633643880382464/2ce92181d0f0f538798e2dc1f9ccfc76.webp' property='og:image'>
+        <meta name="theme-color" content="#FFDD57">
 		<link rel="stylesheet" href="../../resources/css/libraries/bulma.min.css">
 		<link rel="stylesheet" href="../../resources/css/discord/no-decay/noDecaySite.css">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><!-- integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
