Added mobile responsive menu and removed team entrys for squid and crate for no decay site

--- a/discord/no-decay/index.html
+++ b/discord/no-decay/index.html
@@ -185,7 +185,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="column">
+                        <!-- <div class="column">
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
@@ -244,7 +244,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="column">
                                 <div class="card">
                                     <div class="card-image">
@@ -767,15 +767,22 @@
         </div>
         <div id="menu">
             <div class="container">
-                <ul>
-                    <!-- <li><a href="#" class="Disabled button is-unselectable" disabled>Menu</a></li> -->
-                    <li><a href="#header" class="button is-warning is-unselectable">Home</a></li>
-                    <li><a href="#teams-info" class="button is-info is-unselectable">Resources</a></li>
-                    <li><a href="#teams-list" class="button is-link is-unselectable">Our Teams</a></li>
-                    <li><a href="#applications" class="button is-success is-unselectable">Applications</a></li>
-                    <li><a href="#staff" class="button is-danger is-unselectable">Our Staff</a></li>
-                    <li><a href="#footer" class="button is-primary is-unselectable">Legal</a></li>
-                </ul>
+                <div class="columns is-mobile">
+                    <div class="column is-one-half">
+                        <ul>
+                            <!-- <li><a href="#" class="Disabled button is-unselectable" disabled>Menu</a></li> -->
+                            <li><a href="#header" class="button is-warning is-unselectable">Home</a></li>
+                            <li><a href="#teams-info" class="button is-info is-unselectable">Resources</a></li>
+                            <li><a href="#teams-list" class="button is-link is-unselectable">Our Teams</a></li>
+                            <li><a href="#applications" class="button is-success is-unselectable">Applications</a></li>
+                            <li><a href="#staff" class="button is-danger is-unselectable">Our Staff</a></li>
+                            <li><a href="#footer" class="button is-primary is-unselectable">Legal</a></li>
+                        </ul>
+                    </div>
+                    <div class="column is-one-half is-hidden-tablet">
+                        <a class="button is-medium is-hovered is-static is-size-4"><b>&equiv;</b></a>
+                    </div>
+                </div>
             </div>
         </div> 
     </body>
