Updated information on teams for no decay site.

--- a/discord/no-decay/index.html
+++ b/discord/no-decay/index.html
@@ -115,9 +115,9 @@
                                         <br>
                                         <a><b>Captain:</b> <code>Daxy</code></a>
                                         <br>
-                                        <a><b>Staff Contact:</b> <code>T54</code></a>
+                                        <a><b>Staff Contact:</b> <code>T54</code> and <code>Syntax</code></a>
                                         <br>
-                                        <a><b>Coach:</b> <code>SodiePops</code></a>
+                                        <a><b>Coach:</b> <code>SodiePops</code> and <code>Knildropi</code></a>
                                     </div>
                                 </div>
                             </div>
@@ -176,7 +176,7 @@
                                     <div class="content">
                                         <p class="subtitle is-6 has-text-dark"><b>SR range:</b> 1500-2700 SR (new applicants must be &lt;2500 SR)</p>
                                         <p>Team Ramen is a relatively new team, looking for players to fill the roster.</p>
-                                        <a><b>Captain:</b> <code>Dani</code></a>
+                                        <a><b>Captain:</b> <code>Aimmooh</code></a>
                                         <br>
                                         <a><b>Staff Contact:</b> <code>Jam</code></a>
                                         <br>
@@ -268,7 +268,7 @@
                                             <p>Team Sleepy Birds is a relatively new team, looking for players to fill the roster and improve. We want to play Open Division in the future.</p>
                                             <a><b>Captain:</b> <code>Knildropi</code></a>
                                             <br>
-                                            <a><b>Staff Contact:</b> <code>T54</code></a>
+                                            <a><b>Staff Contact:</b> <code>Noirox</code></a>
                                             <br>
                                             <a><b>Coach:</b> <code>SodiePops</code></a>
                                         </div>
