updated descriptions for surver staff memebers for no decay.

--- a/discord/no-decay/index.html
+++ b/discord/no-decay/index.html
@@ -339,7 +339,7 @@
                                                                 <div class="content">
                                                                     <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2500</p>
                                                                     <p>
-                                                                        Owner and creator of the server Jelly is Mum. She keeps the staff in check and oversees everything running smoothly. Plays main tank for Team T2raining Bots.
+                                                                        Owner and creator of the server Jelly is Mum. She keeps the staff in check and oversees everything running smoothly. Flexes for Team T2raining Bots.
                                                                     </p>
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
@@ -373,7 +373,7 @@
                                                                 <div class="content">
                                                                     <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2750</p>
                                                                     <p>
-                                                                        Head of tech. He is left brain of the operation. Managing Bot (primarily BOB), roles and other technical things on the server.
+                                                                        Head of tech. He is left brain of the operation. Manages the bots (primarily BOB), roles and other technical things on the server.
                                                                     </p>
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
@@ -418,7 +418,7 @@
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
                                                                     <ul>
-                                                                        <li>Team T2aining Bots</li>
+                                                                        <li>Teams Team</li>
                                                                     </ul>
                                                                 </div>
                                                             </div>
@@ -459,7 +459,7 @@
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
                                                                     <ul>
-                                                                        <li>Team Loot Cr4te</li>
+                                                                        <li>Teams Team</li>
                                                                     </ul>
                                                                 </div>
                                                             </div>
@@ -488,13 +488,12 @@
                                                                 <div class="content">
                                                                     <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2300</p>
                                                                     <p>
-                                                                        Manages Team Ram3n and owns Team Rh1no. Helps <code>T54#6933</code> run Team Rh1no sometimes.
+                                                                        Manages Team Ram3n and owns Team Rh1no. Best main support on Team T2raining Bots and shot calls for Team T2raining Bots.
                                                                     </p>
                                                                     <!-- <3 -->
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
                                                                     <ul>
-                                                                        <li>Team Rh1no</li>
                                                                         <li>Team T2raining Bots</li>
                                                                         <li>Team Ram3n</li>
                                                                     </ul>
@@ -559,7 +558,7 @@
                                                                 <div class="content">
                                                                     <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2500</p>
                                                                     <p>
-                                                                        Assists the admins with the running of the server and does general house keeping.
+                                                                        Assists the admins with the running of the server and does general house keeping. Also, streams, a lot. Apparently...
                                                                     </p>
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
@@ -593,12 +592,12 @@
                                                                 <div class="content">
                                                                     <p class="subtitle is-6 has-text-dark"><b>SR:</b> 3500</p>
                                                                     <p>
-                                                                        Give some great advice to the other staff. If you want players or coaches, this is your man. (He works in recurtement.) Sometimes works the coaches and on PUGs. 
+                                                                        Give some great advice to the other staff. If you want players or coaches, this is your man. (He works in recruitment.) Helps GM Rh1no by being bad cop. :P 
                                                                     </p>
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
                                                                     <ul>
-                                                                        <li>Team Loot Cr4te</li>
+                                                                        <li>Team Rh1no</li>
                                                                     </ul>
                                                                 </div>
                                                             </div>
@@ -632,7 +631,7 @@
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
                                                                     <ul>
-                                                                        <li>Team Happy 5quids</li>
+                                                                        <li>PUGs Team</li>
                                                                     </ul>
                                                                 </div>
                                                             </div>
@@ -670,7 +669,6 @@
                                                                     <br>
                                                                     <ul>
                                                                         <li>Team Rh1no</li>
-                                                                        <li>Team Sleepy 6irds</li>
                                                                     </ul>
                                                                 </div>
                                                             </div>
